# DevScript

./: README.md  interpreter.py  lexer.py  main.py  output.txt  parser.py  pyproject.toml  test.dev  test_error_missing_string.dev  test_error_quote.dev  test_error_syntax.dev  test_final.dev
devscript/cli/: main.py  repl.py
devscript/core/: ast_nodes.py  environment.py  interpreter.py  lexer.py  parser.py
devscript/stdlib/: arraylib.py  mathlib.py
devscript/utils/: errors.py  tokens.py
docs/: architecture.md  stdlib.md  syntax.md  usage.md
